[gd_scene load_steps=6 format=3 uid="uid://dbowkksthp3pt"]

[ext_resource type="Script" uid="uid://bny6x6pdwvim1" path="res://scripts/opciones.gd" id="1_b3crd"]
[ext_resource type="Texture2D" uid="uid://bjupsinkvrl1x" path="res://fondoMenu/Flux_Dev_A_vibrant_highcontrast_background_image_for_a_2D_plat_1.jpeg" id="2_be1uu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p25xy"]
bg_color = Color(0, 0, 0, 0.607843)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_17m5t"]
bg_color = Color(0, 0, 0, 0.607843)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kim34"]
bg_color = Color(0, 0, 0, 0.607843)

[node name="InicioSesion" type="Control"]
layout_mode = 3
anchor_right = 1.023
anchor_bottom = 1.035
offset_right = -37.496
offset_bottom = -20.6801
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b3crd")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.647
anchor_bottom = 0.708
offset_right = -227.262
offset_bottom = -183.04
grow_horizontal = 2
grow_vertical = 2
color = Color(0.312583, 0.317954, 0.332728, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = 2.0
offset_right = 9.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_be1uu")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.556
anchor_right = 0.5
anchor_bottom = 0.556
offset_left = -144.5
offset_top = -10.4
offset_right = 126.5
offset_bottom = 189.6
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="IniciarSesion" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_p25xy")
text = "Iniciar Sesion"

[node name="Registrarse" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_17m5t")
text = "Registrarse"

[node name="Volver" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_kim34")
text = "Volver"

[node name="LabelInicioSesion" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.5
offset_top = -310.0
offset_right = 173.5
offset_bottom = -249.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Inicio Sesion"
horizontal_alignment = 1

[node name="result_label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -519.5
offset_top = -107.0
offset_right = -162.5
offset_bottom = -45.9999
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1

[node name="LabelUsuario" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -246.5
offset_top = -210.0
offset_right = 110.5
offset_bottom = -149.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 34
text = "Usuario"
horizontal_alignment = 1

[node name="LabelContraseña" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.5
offset_top = -102.0
offset_right = 140.5
offset_bottom = -40.9999
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 34
text = "Contraseña"
horizontal_alignment = 1

[node name="Usuario" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 438.0
offset_top = 155.0
offset_right = 689.0
offset_bottom = 217.0

[node name="Contraseña" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 439.0
offset_top = 263.0
offset_right = 690.0
offset_bottom = 325.0

[connection signal="pressed" from="VBoxContainer/IniciarSesion" to="." method="_on_iniciar_sesion_pressed"]
[connection signal="pressed" from="VBoxContainer/Registrarse" to="." method="_on_registrarse_pressed"]
[connection signal="pressed" from="VBoxContainer/Volver" to="." method="_on_volver_pressed"]
